<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/let_syi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_sign_you_in"
        android:textSize="45sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_you_have_been_missed"
        android:textSize="25sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/let_syi"/>
    <EditText
        android:id="@+id/epu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_phone_or_username"
        android:inputType="text"
        android:background="@drawable/border"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:autofillHints="emailAddress" />
    <EditText
        android:id="@+id/pass_word"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/passwordhint"
        android:inputType="text"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/epu"
        android:autofillHints="password" />
    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="17sp"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/pass_word" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#6D63FE"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent" />
    <View
        android:id="@+id/line"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="@id/or"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        android:layout_marginTop="25dp"/>
    <View
        android:id="@+id/line2"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        app:layout_constraintEnd_toEndOf="@id/or"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="15sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <ImageButton
        android:id="@+id/google_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/googlelogo"
        android:contentDescription="@string/todo0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or" />

    <ImageButton
        android:id="@+id/facebook_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/fblogo"
        android:contentDescription="@string/todo1"
        app:layout_constraintStart_toEndOf="@+id/google_logo"
        app:layout_constraintTop_toBottomOf="@+id/or"/>

    <ImageButton
        android:id="@+id/apple_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/applelogo"
        app:layout_constraintStart_toEndOf="@+id/facebook_logo"
        app:layout_constraintTop_toBottomOf="@+id/or"
        android:contentDescription="@string/todo2"/>
    <TextView
        android:id="@+id/accountAlready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:text="Dont have an account?"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/google_logo" />
    <TextView
        android:id="@+id/regis_ter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="17sp"
        android:layout_marginStart="230dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toEndOf="@+id/accountAlready"
        app:layout_constraintTop_toBottomOf="@+id/apple_logo"/>


</androidx.constraintlayout.widget.ConstraintLayout>