<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_register_account"
        android:textSize="50sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_user_you_have_a_grateful_journey"
        android:textSize="25sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/register"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:inputType="text"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/message" />
    <EditText
        android:id="@+id/bizname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/business_name"
        android:inputType="text"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/username" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/phone"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/bizname" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="text"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/phone" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/pass_word"
        android:inputType="textPassword"
        android:background="@drawable/border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/email" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#6D63FE"
        android:text="Sign Up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/accountAlready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:text="@string/already_have_an_account"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/signUp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="17sp"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/signUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>