<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/firstUi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/first_ui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstUi" />
    <TextView
        android:id="@+id/openingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openMessage"
        app:layout_constraintTop_toBottomOf="@+id/firstText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/signin"
        android:textSize="17sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#6D63FE"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/Register"
        android:textSize="17sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1"

        />

    <ImageView
        android:id="@+id/square0"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openingText" />

    <ImageView
        android:id="@+id/square1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        app:layout_constraintStart_toEndOf="@+id/square0"
        app:layout_constraintTop_toBottomOf="@id/openingText" />

    <ImageView
        android:id="@+id/square2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        app:layout_constraintStart_toEndOf="@+id/square1"
        app:layout_constraintTop_toBottomOf="@id/openingText" />

    <ImageView
        android:id="@+id/square3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:backgroundTint="#6D63FE"
        app:layout_constraintStart_toEndOf="@+id/square2"
        app:layout_constraintTop_toBottomOf="@id/openingText" />

</androidx.constraintlayout.widget.ConstraintLayout>
